--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
      <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
      <id>openshift</id>
      <build>
-        <finalName>SampleApp</finalName>
+        <finalName>demo-0.0.1-SNAPSHOT</finalName>
         <plugins>
           <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
